--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ enum34==1.1.6
 idna==2.8
 ipaddress==1.0.17
 keyring==10.6.0
-keyrings.alt==3.0
+keyringsalt==3.0
 mercurial==4.5.3
 numpy==1.13.3
 pycrypto==2.6.1
-pygame===1.9.1release
+pygame===1.9.1
 pygobject==3.26.1
 pyTelegramBotAPI==3.6.6
 pyxdg==0.25
